--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -222,7 +222,9 @@ img {
 }
 
 /* Active link */
-
+.active-link {
+  color: var(--first-color);
+}
 
 /* Change background header */
 
@@ -325,6 +327,13 @@ img {
 .button--link:hover {
   background-color: transparent;
   color: var(--first-color-alt);
+}
+.button--white {
+  background-color: #fff;
+  color: var(--first-color);
+}
+.button--white:hover {
+  background-color: #fff;
 }
 
 /*==================== ABOUT ====================*/
@@ -655,17 +664,150 @@ img {
   outline: none;
 }
 
-/*==================== PROJECT IN MIND ====================*/
-
+/*==================== PROJECT IN FUTURE ====================*/
+.project {
+  text-align: center;
+}
+.project__bg {
+  background-color: var(--first-color-second);
+  padding-top: 3rem;
+}
+.project__title {
+  font-size: var(--h2-font-size);
+  margin-bottom: var(--mb-0-75);
+}
+.project__description {
+  margin-bottom: var(--mb-1-5);
+}
+.project__title,
+.project__description {
+  color: #fff;
+}
+.project__img {
+  width: 232px;
+  justify-self: center;
+}
 
 /*==================== TESTIMONIAL ====================*/
-
-
+.testimonial__data,
+.testimonial__header {
+  display: flex;
+}
+.testimonial__data {
+  justify-content: space-between;
+  margin-bottom: var(--mb-1);
+}
+.testimonial__img {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin-right: var(--mb-0-75);
+}
+.testimonial__name {
+  font-size: var(--h3-font-size);
+  font-weight: var(--font--medium);
+}
+.testimonial__client {
+  font-size: var(--small-font-size);
+  color: var(--text-color-light);
+}
+.testimonial__description {
+  margin-bottom: var(--mb-2-5);
+}
+.testimonial__icon-star {
+  color: var(--first-color);
+}
+.swiper-container .swiper-pagination-testimonial {
+  bottom: 0;
+}
 /*==================== CONTACT ME ====================*/
+.contact__container {
+  row-gap: 3rem;
+}
+.contact__information {
+  display: flex;
+  margin-bottom: var(--mb-2);
+}
+.contact__icon {
+  font-size: 2rem;
+  color: var(--first-color);
+  margin-right: var(--mb-0-75);
+}
+.contact__title {
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-medium);
+}
+.contact__subtitle {
+  font-size: var(--small-font-size);
+  color: var(--text-color-light);
+}
+.contact__content {
+  border-color: var(--input-color);
+  border-radius: .5rem;
+  padding: .75rem 1rem .25rem;
+}
+.contact__lable {
+  font-size: var(--smaller-font-size);
+  color: var(--title-color);
+}
+
+.contact__input {
+  width: 100%;
+  border-color: var(--input-color);
+  color: var(--text-color);
+  font-family: var(--body-font);
+  font-size: var(--normal-font-size);
+  border: none;
+  outline: none;
+  padding: .25rem .5rem .5rem 0;
+}
 
 
 /*==================== FOOTER ====================*/
-
+.footer {
+  padding-top: 2rem;
+}
+.footer__container {
+  row-gap: 3.5rem;
+}
+.footer__bg {
+  border-color: var(--first-color-second);
+  padding: 2rem 0 3rem;
+}
+.footer__title {
+  font-size: var(--h1-font-size);
+  margin-bottom: var(--mb-0-25);
+}
+.footer__subtitle {
+  font-size: var(--small-font-size);
+}
+.footer__links {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.5rem;
+}
+.footer__link:hover {
+  color: var(--first-color-lighter);
+}
+.footer__social {
+  font-style: 1.25rem;
+  margin-right: var(--mb-1-5);
+}
+.footer__social:hover {
+  color: var(--first-color-lighter);
+}
+.footer__copy {
+  font-size: var(--small-font-size);
+  text-align: center;
+  color: var(--text-color-light);
+  margin-top: var(--mb-3);
+}
+.footer__title,
+.footer__subtitle,
+.footer__link,
+.footer__social {
+  color: #fff;
+}
 
 /*========== SCROLL UP ==========*/
 
